--- a/src/app/features/post-login/inspection-plan-list/component/inspection-plan-inspector-list/inspection-plan-inspector-list.component.html
+++ b/src/app/features/post-login/inspection-plan-list/component/inspection-plan-inspector-list/inspection-plan-inspector-list.component.html
@@ -1,1 +1,40 @@
-<p>inspection-plan-inspector-list works!</p>
+<button *ngIf="selectedInspectors.length == 0; else inspectorList" type="button" pButton class="create-inspector"
+        (click)="changeInspectorVisible()">Tạo ban KTNB
+</button>
+<ng-template #inspectorList></ng-template>
+<div class="list-inspector">
+  <div class="list-inspector-header p-3 text-center">
+    <h5 class="mx-auto">Danh sách thanh tra</h5>
+    <div class="total">
+          <span class="text-secondary mx-auto"
+          >Tổng số: {{ selectedInspectors.length }}</span
+          >
+    </div>
+  </div>
+
+  <div class="card">
+    <div class="overflow-auto">
+      <ng-container  *ngFor="let item of selectedInspectors">
+        <div *ngIf="selectedInspectors" class="mb-2">
+          <div class="scrollview-item d-flex p-3 h-full">
+            <div
+              class="scrollview-item-icon d-flex justify-content-center align-items-center"
+            >
+              <i class="bi bi-person-circle"></i>
+            </div>
+            <div class="scrollview-item-content ms-5">
+              <span class="font-weight-bold">{{ item.user.fullName }}</span>
+              <br/>
+              <span>
+                    {{ item.roles[0].roleName }}
+                <br/>
+                {{ item.school.schoolName }}
+                  </span>
+            </div>
+          </div>
+        </div>
+      </ng-container>
+    </div>
+  </div>
+</div>
+
