--- a/src/app/features/post-login/issue-list/update-issue/update-issue.component.html
+++ b/src/app/features/post-login/issue-list/update-issue/update-issue.component.html
@@ -87,7 +87,7 @@
           </td>
           <td>
             <span class="p-column-title">Chức vụ</span>
-            {{ inspector.roles[0].roleName }}
+            <!-- {{ inspector.roles[0].roleName }} -->
           </td>
           <td>
             <span class="p-column-title">Đơn vị</span>
