--- a/src/app/features/post-login/school-initiation-plan/school-initiation-plan-detail/school-initiation-plan-detail.component.html
+++ b/src/app/features/post-login/school-initiation-plan/school-initiation-plan-detail/school-initiation-plan-detail.component.html
@@ -6,55 +6,100 @@
   acceptLabel="Đồng ý"
   rejectLabel="Hủy"
 ></p-confirmDialog>
+<!-- file preview -->
+<p-dialog
+  [(visible)]="pdfLoaded"
+  [style]="{ width: '80vw' }"
+  [draggable]="false"
+  [resizable]="false"
+>
+  <div *ngIf="pdfLoaded">
+    <iframe [src]="safePdfUrl" width="100%" height="500px"></iframe>
+  </div>
+</p-dialog>
 <!--doc history -->
 <p-dialog
   header="Lịch sử phê duyệt"
   [(visible)]="docHistoryVisible"
   [modal]="true"
-  [style]="{ width: '50vw' }"
+  [style]="{ width: '90vw' }"
   [draggable]="false"
   [resizable]="false"
 >
-  <p-table
-    [value]="schoolinitiationplan.documents"
-    [tableStyle]="{ 'min-width': '50rem' }"
-  >
-    <ng-template pTemplate="header">
-      <tr>
-        <th>Id</th>
-        <th>Tài liệu</th>
-        <th>Trạng thái</th>
-        <th>Ngày phê duyệt</th>
-        <th></th>
-      </tr>
-    </ng-template>
-    <ng-template pTemplate="body" let-plan>
-      <tr>
-        <td>{{ plan.id }}</td>
-        <td>{{ plan.schoolDocument.documentName }}</td>
-        <td>
-          <p-tag
-            *ngIf="
-              plan.schoolDocument.status.statusId >= 1 &&
-              plan.schoolDocument.status.statusId <= 4
-            "
-            class="status"
-            [severity]="getStatusSeverity(plan.schoolDocument.status.statusId)"
-            [rounded]="true"
-          >
-            {{ plan.schoolDocument.status.statusName }}
-          </p-tag>
-        </td>
+  <ng-container *ngIf="schoolinitiationplan?.documents">
+    <p-table
+      [value]="schoolinitiationplan.documents"
+      [tableStyle]="{ 'min-width': '50rem' }"
+    >
+      <ng-template pTemplate="header">
+        <tr>
+          <th>Id</th>
+          <th>Tài liệu</th>
+          <th>Mã tài liệu</th>
+          <th>Ngày tạo</th>
+          <th>Người tạo</th>
+          <th>Trạng thái</th>
+          <th>Ngày phê duyệt</th>
+          <th>Người đánh giá</th>
+          <th></th>
+        </tr>
+      </ng-template>
+      <ng-template pTemplate="body" let-plan>
+        <tr>
+          <td>{{ plan.id }}</td>
+          <td>{{ plan.schoolDocument.documentName }}</td>
+          <td>{{ plan.schoolDocument.documentCode }}</td>
+          <td>{{ plan.schoolDocument.uploadedDate | date : "dd/MM/yyyy" }}</td>
+          <td>{{ plan.schoolDocument.account.user.fullName }}</td>
+          <td>
+            <p-tag
+              *ngIf="plan.schoolDocument.status.statusId == 10"
+              class="status"
+              [severity]="'warning'"
+              [rounded]="true"
+            >
+              {{ plan.schoolDocument.status.statusName }}
+            </p-tag>
+            <p-tag
+              *ngIf="plan.schoolDocument.status.statusId == 11"
+              class="status"
+              [severity]="'success'"
+              [rounded]="true"
+            >
+              {{ plan.schoolDocument.status.statusName }}
+            </p-tag>
+            <p-tag
+              *ngIf="plan.schoolDocument.status.statusId == 12"
+              class="status"
+              [severity]="'danger'"
+              [rounded]="true"
+            >
+              {{ plan.schoolDocument.status.statusName }}
+            </p-tag>
+          </td>
 
-        <td>{{ plan.createdDate }}</td>
-        <td><a href="">Chi tiết đánh giá</a></td>
-      </tr>
-    </ng-template>
-  </p-table>
+          <td *ngIf="plan.departmentDocument">
+            {{ plan.departmentDocument.uploadedDate | date : "dd/MM/yyyy" }}
+          </td>
+          <td *ngIf="plan.departmentDocument">
+            {{ plan.departmentDocument.account.user.fullName }}
+          </td>
+          <td>
+            <button pButton *ngIf="plan.departmentDocument">Chi tiết</button>
+          </td>
+        </tr>
+      </ng-template>
+      <ng-template pTemplate="emptymessage">
+        <tr>
+          <td colspan="8">Không có lịch sử phê duyệt</td>
+        </tr>
+      </ng-template>
+    </p-table>
+  </ng-container>
 </p-dialog>
-<!-- reset deadline -->
 
 <form [formGroup]="inputFileForm">
+  <!-- reset deadline -->
   <p-dialog
     header="Chỉnh sửa hạn nộp"
     [(visible)]="resetDeadlineVisible"
@@ -77,7 +122,7 @@
     header="Đánh giá tài liệu"
     [(visible)]="uploadFileVisible"
     [modal]="true"
-    [style]="{ width: '50vw', height: '800px' }"
+    [style]="{ width: '50vw', height: '600px' }"
     [draggable]="false"
     [resizable]="false"
   >
@@ -123,23 +168,6 @@
         class="col-md-3"
       ></button>
     </div>
-    <!-- <div class="plan-status">
-      <label for="">Kết quả đánh giá</label>
-      <br />
-      <p-dropdown
-        [options]="dropdownOptions"
-        formControlName="statusPlan"
-        optionLabel="label"
-      >
-        <ng-template let-option pTemplate="item">
-          <p-tag [severity]="option.severity">{{ option.label }}</p-tag>
-        </ng-template>
-      </p-dropdown>
-      {{ inputFileForm.get("statusPlan")?.value | json }}
-      <div *ngIf="inputFileForm.get('statusPlan')?.value == '4'">
-        New div content
-      </div>
-    </div> -->
     <button type="button" pButton (click)="upload()">Tải tài liệu</button>
   </p-dialog>
 </form>
@@ -163,13 +191,13 @@
         <div class="mb-3">
           <span class="mb-2 text-black-50">Ngày tạo</span>
           <p class="font-weight-bold">
-            {{ schoolinitiationplan.createdDate | date : "MM/dd/yyyy" }}
+            {{ schoolinitiationplan.createdDate | date : "dd/MM/yyyy" }}
           </p>
         </div>
       </div>
       <div class="col-md-4">
         <div class="mb-3">
-          <span class="mb-2 text-black-50">Người tạo</span>
+          <span class="mb-2 text-black-50">Người giao việc</span>
           <p class="font-weight-bold">{{ schoolinitiationplan.createdBy }}</p>
         </div>
         <div class="mb-3">
@@ -177,8 +205,8 @@
           <br />
           <p-tag
             *ngIf="
-              schoolinitiationplan.status.statusId >= 1 &&
-              schoolinitiationplan.status.statusId <= 4
+              schoolinitiationplan.status.statusId >= 6 &&
+              schoolinitiationplan.status.statusId <= 9
             "
             class="status"
             [severity]="getStatusSeverity(schoolinitiationplan.status.statusId)"
@@ -187,17 +215,45 @@
             {{ schoolinitiationplan.status.statusName }}
           </p-tag>
         </div>
+        <div class="mb-3">
+          <span class="mb-2 text-black-50">Hạn nộp</span>
+          <p class="font-weight-bold">
+            {{ schoolinitiationplan.deadline | date : "dd/MM/yyyy" }}
+          </p>
+        </div>
       </div>
     </div>
     <div class="plan-file mt-3">
       <span class="text-black-50">Tài liệu</span>
       <br />
-      <button pButton class="mb-2" (click)="docHistoryVisible = true">
-        Xem lịch sử phê duyệt tài liệu
-      </button>
-      <div class="plan-file-item d-flex">
+      <div class="row">
+        <div class="col-md-8">
+          <button pButton class="mb-2" (click)="docHistoryVisible = true">
+            Xem lịch sử phê duyệt tài liệu
+          </button>
+        </div>
+        <div class="col-md-4">
+          <button pButton class="mb-2" (click)="redirectToIssue()">
+            Kế hoạch kiểm tra
+          </button>
+        </div>
+      </div>
+
+      <div
+        *ngIf="schoolinitiationplan.status.statusId != 6"
+        class="plan-file-item d-flex"
+      >
         <div class="plan-file-item-img"></div>
-        <div class="plan-file-item-content"></div>
+        <div class="plan-file-item-content">
+          <div class="col-md-10 p-2">
+            <span class="font-weight-bold">
+              {{ lastDocs.schoolDocument.documentName }}
+            </span>
+            <br />
+            <span class="font-weight-bold">Mã: </span
+            ><span>{{ lastDocs.schoolDocument.documentCode }}</span>
+          </div>
+        </div>
       </div>
     </div>
   </div>
@@ -206,73 +262,122 @@
       <div class="py-4 header text-center">
         <h4>Đánh giá kế hoạch</h4>
       </div>
-      <!-- <form [formGroup]="inputFileForm"></form> -->
-      <div
-        *ngIf="!fileStatus"
-        class="input-file d-flex justify-content-center align-items-center"
-      >
-        <!-- <input
-          type="file"
-          #fileInput
-          style="display: none"
-          (change)="handleFileInputChange(fileInput)"
-        /> -->
-        <!-- <input
-          pInputText
-          readonly
-          class="col-md-9"
-          placeholder="{{
-            fileInputPlaceholders
-              ? fileInputPlaceholders
-              : 'Chọn file để tải lên'
-          }}"
-        /> -->
-        <button
-          type="button"
-          pButton
-          label="Đánh giá"
-          (click)="uploadFileVisible = true"
-          class="col-md-3"
-        ></button>
-      </div>
 
-      <div *ngIf="fileStatus" class="px-4 my-4">
-        <div class="plan-file-item d-flex">
-          <div class="plan-file-item-img"></div>
-          <div class="plan-file-item-content row">
-            <div class="col-md-10 p-2">
-              <span class="font-weight-bold">
-                {{ inputFileForm.get("documentName")?.value }}
-              </span>
-              <br />
-              <span class="font-weight-bold">Mã: </span
-              ><span>{{ inputFileForm.get("documentCode")?.value }}</span>
-            </div>
-            <div
-              class="col-md-2 d-flex justify-content-center align-items-center"
-            >
+      <ng-container *ngIf="schoolinitiationplan.status.statusId == 6">
+        <div class="input-file">
+          <div class="my-4 d-flex justify-content-center align-items-center">
+            <span class="p-error">
+              Phía trường chưa gửi tài liệu nên không thể đánh giá
+            </span>
+          </div>
+          <div class="d-flex justify-content-center align-items-center">
+            <button
+              type="button"
+              pButton
+              [disabled]="true"
+              label="Đánh giá"
+              (click)="uploadFileVisible = true"
+              class="col-md-3"
+            ></button>
+          </div>
+        </div>
+      </ng-container>
+      <ng-container *ngIf="schoolinitiationplan.status.statusId == 7">
+        <div
+          *ngIf="!fileStatus"
+          class="input-file d-flex justify-content-center align-items-center"
+        >
+          <button
+            type="button"
+            pButton
+            label="Đánh giá"
+            (click)="uploadFileVisible = true"
+            class="col-md-3"
+          ></button>
+        </div>
+
+        <div *ngIf="fileStatus" class="px-4 my-4">
+          <div class="plan-file-item d-flex">
+            <div class="plan-file-item-img"></div>
+            <div class="plan-file-item-content row">
+              <div class="col-md-10 p-2">
+                <span class="font-weight-bold">
+                  {{ inputFileForm.get("documentName")?.value }}
+                </span>
+                <br />
+                <span class="font-weight-bold">Mã: </span
+                ><span>{{ inputFileForm.get("documentCode")?.value }}</span>
+              </div>
               <div
-                *ngIf="iconStatus"
-                class="delete-icon d-flex justify-content-center align-items-center"
-                (click)="deleteFile()"
+                class="col-md-2 d-flex justify-content-center align-items-center"
               >
-                <i class="bi bi-x-lg"></i>
+                <div
+                  *ngIf="iconStatus"
+                  class="delete-icon d-flex justify-content-center align-items-center"
+                  (click)="deleteFile()"
+                >
+                  <i class="bi bi-x-lg"></i>
+                </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
-      <div
-        *ngIf="fileStatus"
-        class="button-bottom py-4 d-flex justify-content-around align-items-center"
+        <div
+          *ngIf="buttonApproveStatus"
+          class="button-bottom py-4 d-flex justify-content-around align-items-center"
+        >
+          <button type="button" class="p-tag p-tag-danger" (click)="reject()">
+            Không phê duyệt
+          </button>
+          <button type="button" class="p-tag p-tag-success" (click)="approve()">
+            Phê duyệt
+          </button>
+        </div>
+      </ng-container>
+      <ng-container
+        *ngIf="
+          schoolinitiationplan.status.statusId == 8 ||
+          schoolinitiationplan.status.statusId == 9
+        "
       >
-        <button type="button" class="p-tag p-tag-danger" (click)="reject()">
-          Không phê duyệt
-        </button>
-        <button type="button" class="p-tag p-tag-success" (click)="approve()">
-          Phê duyệt
-        </button>
-      </div>
+        <div
+          class="px-4 my-4"
+          (click)="openNewTab(lastDocs.departmentDocument.documentLink)"
+        >
+          <div class="plan-file-item d-flex">
+            <div class="plan-file-item-img"></div>
+            <div class="plan-file-item-content row">
+              <div class="col-md-10 p-2">
+                <span class="font-weight-bold">
+                  {{ lastDocs.departmentDocument.documentName }}
+                </span>
+                <br />
+                <span class="font-weight-bold">Mã: </span
+                ><span>{{ lastDocs.departmentDocument.documentCode }}</span>
+              </div>
+            </div>
+          </div>
+          <div class="mt-5 d-flex justify-content-center align-items-center">
+            <span>Kết quả đánh giá:</span> &nbsp;&nbsp;
+            <p-tag
+              *ngIf="lastDocs.departmentDocument.status.statusId == 11"
+              class="status"
+              [severity]="'success'"
+              [rounded]="true"
+            >
+              {{ lastDocs.departmentDocument.status.statusName }}
+            </p-tag>
+            <p-tag
+              *ngIf="lastDocs.departmentDocument.status.statusId == 12"
+              class="status"
+              [severity]="'danger'"
+              [rounded]="true"
+            >
+              {{ lastDocs.departmentDocument.status.statusName }}
+            </p-tag>
+          </div>
+        </div>
+      </ng-container>
     </div>
   </div>
 </div>
