Inspection plan detail

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -24,7 +24,7 @@
           </a>
         </li>
         <li class="p-2 rounded" routerLinkActive="active">
-          <a class="" [routerLink]="['/inspectionplan']">
+          <a class="" [routerLink]="['/inspection_plan']">
             <div>
               <i class="bi bi-file-earmark-person"></i>
               &nbsp; Thanh tra
