--- a/src/app/features/post-login/inspection-plan-list/component/inspection-plan-inspector-list/inspection-plan-inspector-list.component.scss
+++ b/src/app/features/post-login/inspection-plan-list/component/inspection-plan-inspector-list/inspection-plan-inspector-list.component.scss
@@ -7,10 +7,15 @@
     border-radius: 8px;
     border: solid 1px $primary;
     transition: all 0.5s ease;
-    margin-right: 20px;
     &:hover {
       background-color: $primary-hover;
       border-color: $primary-hover;
     }
+  }
+}
+
+.card{
+  span:not(:first-child){
+    font-size: 14px;
   }
 }
