--- a/src/app/features/post-login/inspection-plan-list/inspection-plan-detail/inspection-plan-detail.component.html
+++ b/src/app/features/post-login/inspection-plan-list/inspection-plan-detail/inspection-plan-detail.component.html
@@ -1,1 +1,55 @@
-<p>inspection-plan-detail works!</p>
+<div class="row inspection-plan-detail">
+  <h4 class="mb-3">Tạo mới quyết định kiểm tra</h4>
+  <div class="row">
+    <div class="form-content col-md-8">
+      <div class="row">
+        <div class="col-md-9">
+          <div class="inspection-plan-name mb-1">
+            <span>Tên quyết định kiểm tra</span>
+            <p>{{inspectionPlan.inspectionPlanName}}</p>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <span>Ngày bắt đầu</span>
+          <p>{{inspectionPlan.startDate | date:"dd/MM/yyyy"}}</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-9">
+          <div class="inspection-plan-name mb-1">
+            <span>Tên trường</span>
+            <p>{{inspectionPlan.school.schoolName}}</p>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <span>Ngày kết thúc</span>
+          <p>{{inspectionPlan.endDate | date:"dd/MM/yyyy"}}</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-9">
+          <div class="inspection-plan-name mb-1">
+            <span>Chi tiết</span>
+            <textarea pInputTextarea class="w-100" readonly>{{inspectionPlan.description}}</textarea>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <span>Trạng thái</span>
+          <p>{{inspectionPlan.endDate}}</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4 d-flex justify-content-center">
+      <app-inspection-plan-inspector-list class="w-100" [selectedInspectors]="inspectionPlan.inspectorTeams"
+      ></app-inspection-plan-inspector-list>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-6"></div>
+  </div>
+  <div class="mt-5 row w-100">
+    <div class="col-12 save-button d-flex w-100">
+      <button pButton class="btn text-white">Xác nhận</button>
+    </div>
+  </div>
+</div>
