--- a/src/app/features/post-login/issue-list/update-issue/update-issue.component.html
+++ b/src/app/features/post-login/issue-list/update-issue/update-issue.component.html
@@ -134,7 +134,7 @@
             <div class="row ms-5">
               <div class="col-md-10">
                 <span class="font-weight-bold font-size-18">{{
-                  item.documentName
+                  item.documentName + "." + item.fileExtension
                 }}</span>
                 <br />
                 <span>
@@ -289,7 +289,7 @@
               <div class="row ms-5">
                 <div class="col-md-10">
                   <span class="font-weight-bold font-size-18">{{
-                    item.documentName
+                    item.documentName + "." + item.fileExtension
                   }}</span>
                   <br />
                   <span>
