--- a/src/app/features/post-login/school-initiation-plan/school-initiation-plan-detail/school-initiation-plan-detail.component.html
+++ b/src/app/features/post-login/school-initiation-plan/school-initiation-plan-detail/school-initiation-plan-detail.component.html
@@ -9,7 +9,7 @@
 <!-- file preview -->
 <p-dialog
   [(visible)]="pdfLoaded"
-  [style]="{ width: '80vw' }"
+  [style]="{ width: '90vw', height: '1080px' }"
   [draggable]="false"
   [resizable]="false"
 >
@@ -131,6 +131,7 @@
     [style]="{ width: '50vw', height: '600px' }"
     [draggable]="false"
     [resizable]="false"
+    (onHide)="hideUploadPopup()"
   >
     <label for="">Tên tài liệu</label>
     <br />
@@ -262,7 +263,9 @@
             </span>
             <br />
             <span class="font-weight-bold">Mã: </span>
-            <span>{{ lastDocs.schoolDocument.documentCode }}</span>
+            <span class="text-black-50">{{
+              lastDocs.schoolDocument.documentCode
+            }}</span>
             <br />
             <span class="text-black-50">{{
               lastDocs.schoolDocument.sizeFormat
@@ -333,7 +336,9 @@
                 </span>
                 <br />
                 <span class="font-weight-bold">Mã: </span
-                ><span>{{ inputFileForm.get("documentCode")?.value }}</span>
+                ><span class="text-black-50">{{
+                  inputFileForm.get("documentCode")?.value
+                }}</span>
               </div>
               <div
                 class="col-md-2 d-flex justify-content-center align-items-center"
@@ -384,7 +389,17 @@
                 </span>
                 <br />
                 <span class="font-weight-bold">Mã: </span
-                ><span>{{ lastDocs.departmentDocument.documentCode }}</span>
+                ><span class="text-black-50">{{
+                  lastDocs.departmentDocument.documentCode
+                }}</span>
+                <br />
+                <span class="text-black-50">{{
+                  lastDocs.departmentDocument.sizeFormat
+                }}</span>
+                <br />
+                <span class="text-black-50">{{
+                  lastDocs.departmentDocument.uploadedDate | date : "dd/MM/yyyy"
+                }}</span>
               </div>
             </div>
           </div>
