--- a/src/app/features/post-login/school-initiation-plan/school-initiation-plan-detail/school-initiation-plan-detail.component.scss
+++ b/src/app/features/post-login/school-initiation-plan/school-initiation-plan-detail/school-initiation-plan-detail.component.scss
@@ -2,7 +2,7 @@
 @import "../../../../../assets/scss/prime-custom";
 
 .plan {
-    border-right: solid 1px $primary;
+    // border-right: solid 1px $primary;
     height: 100%;
     font-size: 16px;
 }
@@ -10,18 +10,27 @@
     // border-bottom: solid 1px $primary;
 }
 .plan-file-item {
+    cursor: pointer;
     height: 160px;
     border-radius: 15px;
-    box-shadow:
-        rgba(0, 0, 0, 0.16) 0px 3px 6px,
-        rgba(0, 0, 0, 0.23) 0px 3px 6px;
-
+    background-color: #f0f3f5;
+    // background-color: #f0f0f0;
+    // border: 1px solid #b0b0b0;
+    transition: all 0.6s ease;
+    .font-weight-bold {
+        color: #686f73;
+    }
+    &:hover {
+        box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+        cursor: pointer;
+    }
     .plan-file-item-img {
         width: 30%;
-        // background-color: #cdf8e3;
         border-radius: 15px 0 0 15px;
     }
     .plan-file-item-content {
+        font-size: 16px;
+
         width: 70%;
         // background-color: #ffd4cf;
         border-radius: 0px 15px 15px 0px;
@@ -41,9 +50,10 @@
     }
 }
 .upload {
-    box-shadow:
-        rgba(0, 0, 0, 0.16) 0px 3px 6px,
-        rgba(0, 0, 0, 0.23) 0px 3px 6px;
+    // box-shadow:
+    //     rgba(0, 0, 0, 0.16) 0px 3px 6px,
+    //     rgba(0, 0, 0, 0.23) 0px 3px 6px;
+    border: 0.5px solid $primary;
     width: 100%;
     border-radius: 15px;
     height: 100%;
