--- a/src/app/features/post-login/school-side/initiation-plan/initiation-plan-detail/initiation-plan-detail.component.scss
+++ b/src/app/features/post-login/school-side/initiation-plan/initiation-plan-detail/initiation-plan-detail.component.scss
@@ -13,8 +13,15 @@
     cursor: pointer;
     height: 160px;
     border-radius: 15px;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    background-color: #f8f8f8;
+    background-color: #f0f3f5;
+    transition: all 0.6s ease;
+    .font-weight-bold {
+        color: #686f73;
+    }
+    &:hover {
+        box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+        cursor: pointer;
+    }
     .plan-file-item-img {
         width: 30%;
         border-radius: 15px 0 0 15px;
@@ -75,11 +82,10 @@ p {
 .button-bottom {
     button {
         font-size: 16px;
-        padding: 15px 20px;
-        border-radius: 30px;
-        border: none;
         width: 200px;
         transition: all 0.5s ease;
+        margin: 0;
+
         &.p-tag-danger {
             &:hover {
                 background-color: #ffd4cf;
@@ -100,16 +106,17 @@ p-calendar.p-calendar-inline {
 }
 input {
     border-radius: 8px;
-    width: 400px;
+    width: 800px;
 }
 .input-file-popup {
-    width: 100%;
+    width: 800px;
     input {
-        width: 60%;
+        width: 600px;
         border-radius: 8px 0 0 8px;
     }
     button {
         border-radius: 0 8px 8px 0;
+        margin: 0px;
     }
 }
 :host ::ng-deep {
@@ -131,4 +138,7 @@ input {
     //         color: #fff;
     //     }
     // }
+}
+.font-size-20 {
+    font-size: 20px;
 }
