--- a/src/app/features/post-login/inspection-plan-list/component/inspection-plan-inspector-list/inspection-plan-inspector-list.component.html
+++ b/src/app/features/post-login/inspection-plan-list/component/inspection-plan-inspector-list/inspection-plan-inspector-list.component.html
@@ -1,19 +1,19 @@
-<div *ngIf="selectedInspectors.length == 0; else inspectorList" class="text-center">
+<div *ngIf="selectedInspectors?.length == 0 && listEditable; else inspectorList" class="text-center">
   <button type="button" pButton class="create-inspector" (click)="changeInspectorVisible()">Tạo ban KTNB</button>
 </div>
 <ng-template #inspectorList>
-  <div class="list-inspector">
+  <div class="list-inspector h-100 d-flex flex-column">
     <div class="list-inspector-header px-3 text-center">
       <h5 class="mx-auto">Danh sách thanh tra</h5>
       <div class="total">
           <span class="text-secondary mx-auto"
-          >Tổng số: {{ selectedInspectors.length }}</span
+          >Tổng số: {{ selectedInspectors?.length || 0}}</span
           >
       </div>
     </div>
 
-    <div class="card mt-2">
-      <div class="overflow-auto">
+    <div class="card mt-2 flex-fill">
+      <div class="overflow-auto  d-flex flex-column justify-content-between h-100">
         <ng-container *ngFor="let item of selectedInspectors">
           <div *ngIf="selectedInspectors" class="mb-2">
             <div class="scrollview-item d-flex p-3 h-full">
@@ -23,11 +23,11 @@
                 <img src="../../../../../../assets/img/user_icon.svg" alt="" />
               </div>
               <div class="scrollview-item-content ms-3">
-                <span class="font-weight-bold">{{ item.user.fullName }}</span>
+                <span class="font-weight-bold">{{ item.user?.fullName || item.accountName}}</span>
                 <br/>
                 <span class="fw-light">
-                    {{ item.roles[0].roleName }} -
-                  {{ item.school.schoolName }}
+                    {{ item.roles?.length > 0 ? item.roles[0].roleName : item.roleName[0]}} -
+                  {{ item.school?.schoolName || item.schoolName}}
                   </span>
               </div>
             </div>
@@ -36,7 +36,7 @@
       </div>
     </div>
     <div class="w-100 d-flex justify-content-center mt-2">
-      <button type="button" pButton class="create-inspector"
+      <button type="button" pButton class="create-inspector" *ngIf="listEditable"
               (click)="changeInspectorVisible()">Chỉnh sửa ban KTNB
       </button>
     </div>
