--- a/src/app/features/post-login/inspection-plan-list/inspection-plan-detail/inspection-plan-detail.component.scss
+++ b/src/app/features/post-login/inspection-plan-list/inspection-plan-detail/inspection-plan-detail.component.scss
@@ -1,13 +1,51 @@
 @import "../../../../../assets/scss/base";
 
 .inspection-plan-detail {
-    font-size: 16px;
+  font-size: 16px;
+}
+
+.spinner {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  .spinner-border {
+    width: 5rem;
+    height: 5rem;
+    color: $primary;
+  }
+  p{
+    color: $primary;
+  }
 }
 
 .p-inputtextarea {
   border-radius: 8px;
 }
 
+.file-item {
+  background-color: #f9fafb;
+  border-radius: 10px;
+  font-size: 16px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+
+  .file-item-icon {
+    img {
+      width: 100%;
+      height: 100px;
+    }
+  }
+
+  .file-item-content {
+  }
+
+  &:hover {
+    cursor: pointer;
+    background-color: rgb(244, 244, 244);
+  }
+}
 
 .save-button {
   button {
