--- a/src/app/features/post-login/school-side/initiation-plan/initiation-plan-detail/initiation-plan-detail.component.html
+++ b/src/app/features/post-login/school-side/initiation-plan/initiation-plan-detail/initiation-plan-detail.component.html
@@ -386,22 +386,26 @@
               </div>
             </div>
           </div>
-          <div
-            class="mt-2 btn-upload d-flex justify-content-center align-items-center"
-          >
-            <button
-              *ngIf="!iconStatus"
-              label="Chỉnh sửa"
-              pButton
-              (click)="visibleIcon()"
-            ></button>
-            <button
-              *ngIf="iconStatus"
-              type="button"
-              pButton
-              label="Xác nhận"
-              (click)="confirmUpload()"
-            ></button>
+          <div class="mt-2 btn-upload">
+            <div class="d-flex justify-content-center align-items-center">
+              <span *ngIf="!checkCanEdit()" class="p-error">Hết mẹ hạn rồi</span>
+            </div>
+            <div class="d-flex justify-content-center align-items-center">
+              <button
+                *ngIf="!iconStatus"
+                label="Chỉnh sửa"
+                pButton
+                [disabled]="!checkCanEdit()"
+                (click)="visibleIcon()"
+              ></button>
+              <button
+                *ngIf="iconStatus"
+                type="button"
+                pButton
+                label="Xác nhận"
+                (click)="confirmUpload()"
+              ></button>
+            </div>
           </div>
         </div>
         <div
